--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,13 @@
+<style>
+  @media print {
+     .noprint {
+        visibility: hidden;
+     }
+  }
+  </style>
+<div class="noprint">
+
+
 <div id="wrapper" [className]="active? 'toggled' : ''">
 
     <aside id="sidebar-wrapper">
@@ -34,3 +44,5 @@
     </section> -->
   
   </div>
+
+</div>
