--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -3,8 +3,8 @@
     <span class="h4 text-center spinner-border" role="status" *ngIf="loading">
       <span class="sr-only">Loading...</span>
     </span>
-     </div> 
-     
+  </div>
+
 </div>
 <div class="wrapper container mt-5 mb-5">
   <form class="form" [formGroup]="contractForm">
@@ -12,7 +12,8 @@
       <div class="form-group col-6">
         <!-- select SO organization -->
         <label for="batch">Select Batch</label>
-        <select id="batch" class="form-control" formControlName="batchId" (change)="changeSoFilter(0,contractForm.value.batchId)">
+        <select required id="batch" class="form-control" formControlName="batchId"
+          (change)="changeSoFilter(0,contractForm.value.batchId)">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of allBatch" [value]="item['batchId']">{{item['batchNo']}}</option>
         </select>
@@ -20,34 +21,169 @@
 
       <div class="form-group col-6">
         <label for="pm">Select PM</label>
-        <select id="pm" class="form-control" formControlName="personId" (change)="changeSoFilter(1,contractForm.value.personId)">
+        <select required id="pm" class="form-control" formControlName="personId"
+          (change)="changeSoFilter(1,contractForm.value.personId)">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of allProjectManager" [value]="item['personId']">
             <span *ngIf="item['firstName']">{{item['firstName']}} </span>
             <span *ngIf="item['middleName']">{{item['middleName']}} </span>
             <span *ngIf="item['lastName']">{{item['lastName']}} </span>
-        
+
           </option>
         </select>
       </div>
     </div>
+
     <div class="form-row">
-     
+
       <div class="form-group col-12">
         <!-- select SO organization -->
-        <label for="so">Select SO <span class="ml-2 text-danger" *ngIf="showNotification">Select Both of Above</span></label>
-        <select id="so" class="form-control" formControlName="soId">
+        <label for="so">Select SO <span class="ml-2 text-danger" *ngIf="showNotification">Select Both of
+            Above</span></label>
+        <select required id="so" class="form-control" formControlName="soId"
+          (change)="getStaffBySoId(contractForm.value.soId)">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of soUnderPM" [value]="item['soId']">{{item['name']}}</option>
         </select>
       </div>
     </div>
 
+    <!-- date -->
+    <div class="form-row">
+      <div class="form-group col-2">
+        <label for="startDate">Start Date</label>
+        <input required id="startDate" type="text" class="form-control" placeholder="Start Year"
+          formControlName="startYear">
+      </div>
+      <div class="form-group col-2">
+        <label for="">..</label>
+
+        <select required id="startMonth" class="form-control" formControlName="startMonth">
+          <option value="0"> Baisakh</option>
+          <option value="1"> Jeth</option>
+          <option value="2"> Asar</option>
+          <option value="3"> Shrawn</option>
+          <option value="4"> Bhadra</option>
+          <option value="5"> Ashoj</option>
+          <option value="6"> Kartik</option>
+          <option value="7"> Mangsir</option>
+          <option value="8"> Paush</option>
+          <option value="9"> Magh</option>
+          <option value="10"> Falgun</option>
+          <option value="11"> Chaitra</option>
+        </select>
+      </div>
+      <div class="form-group col-2">
+        <label for="startDay">..</label>
+
+        <select required id="startDay" class="form-control" formControlName="startDay">
+          <option value="1"> 1</option>
+          <option value="2"> 2</option>
+          <option value="3"> 3</option>
+          <option value="4"> 4</option>
+          <option value="5"> 5</option>
+          <option value="6"> 6</option>
+          <option value="7"> 7</option>
+          <option value="8"> 8</option>
+          <option value="9"> 9</option>
+          <option value="10"> 10</option>
+          <option value="11"> 11</option>
+          <option value="12"> 12</option>
+          <option value="13"> 13</option>
+          <option value="14"> 14</option>
+          <option value="15"> 15</option>
+          <option value="16"> 16</option>
+          <option value="17"> 17</option>
+          <option value="18"> 18</option>
+          <option value="19"> 19</option>
+          <option value="20"> 20</option>
+          <option value="21"> 21</option>
+          <option value="22"> 22</option>
+          <option value="23"> 23</option>
+          <option value="24"> 24</option>
+          <option value="25"> 25</option>
+          <option value="26"> 26</option>
+          <option value="27"> 27</option>
+          <option value="28"> 28</option>
+          <option value="29"> 29</option>
+          <option value="30"> 30</option>
+          <option value="31"> 31</option>
+          <option value="32"> 32</option>
+        </select>
+      </div>
+
+      <div class="form-group col-2">
+        <label for="endDate">End Date</label>
+        <input required id="endDate" type="text" class="form-control" placeholder="End Year" formControlName="endYear">
+      </div>
+      <div class="form-group col-2">
+        <label for="">..</label>
+
+        <select required id="endMonth" class="form-control" formControlName="endMonth">
+          <option value="0"> Baisakh</option>
+          <option value="1"> Jeth</option>
+          <option value="2"> Asar</option>
+          <option value="3"> Shrawn</option>
+          <option value="4"> Bhadra</option>
+          <option value="5"> Ashoj</option>
+          <option value="6"> Kartik</option>
+          <option value="7"> Mangsir</option>
+          <option value="8"> Paush</option>
+          <option value="9"> Magh</option>
+          <option value="10"> Falgun</option>
+          <option value="11"> Chaitra</option>
+
+        </select>
+      </div>
+      <div class="form-group col-2">
+        <label for="endDay">..</label>
+
+        <select required id="endDay" class="form-control" formControlName="endDay">
+          <option value="1"> 1</option>
+          <option value="2"> 2</option>
+          <option value="3"> 3</option>
+          <option value="4"> 4</option>
+          <option value="5"> 5</option>
+          <option value="6"> 6</option>
+          <option value="7"> 7</option>
+          <option value="8"> 8</option>
+          <option value="9"> 9</option>
+          <option value="10"> 10</option>
+          <option value="11"> 11</option>
+          <option value="12"> 12</option>
+          <option value="13"> 13</option>
+          <option value="14"> 14</option>
+          <option value="15"> 15</option>
+          <option value="16"> 16</option>
+          <option value="17"> 17</option>
+          <option value="18"> 18</option>
+          <option value="19"> 19</option>
+          <option value="20"> 20</option>
+          <option value="21"> 21</option>
+          <option value="22"> 22</option>
+          <option value="23"> 23</option>
+          <option value="24"> 24</option>
+          <option value="25"> 25</option>
+          <option value="26"> 26</option>
+          <option value="27"> 27</option>
+          <option value="28"> 28</option>
+          <option value="29"> 29</option>
+          <option value="30"> 30</option>
+          <option value="31"> 31</option>
+          <option value="32"> 32</option>
+
+
+        </select>
+      </div>
+    </div>
+    <!-- end of date -->
+
     <div class="form-row">
       <div class="form-group col-md-6">
         <!-- select district -->
         <label for="district">Select District </label>
-        <select id="district" class="form-control" formControlName="districtId" (change)="selectDistrict(contractForm.value.districtId)">
+        <select required id="district" class="form-control" formControlName="districtId"
+          (change)="selectDistrict(contractForm.value.districtId)">
           <option value='none'>Choose...</option>
           <option *ngFor="let item of allDistrict" [value]="item['districtId']">{{item['name']}} </option>
         </select>
@@ -55,25 +191,27 @@
       <div class="form-group col-md-6">
         <!-- select Municipality or VDC -->
         <label for="muni">Select Local Body</label>
-        <select id="muni" class="form-control" formControlName="localBodyId">
+        <select required id="muni" class="form-control" formControlName="localBodyId">
           <option selected value='none'>Choose...</option>
           <option *ngFor="let item of localUnderDistrict" [value]="item['localBodyId']">{{item['name']}}</option>
 
         </select>
       </div>
     </div>
+
+    <!-- //schemes -->
     <div class="form-row">
       <div class="form-group col-6">
         <div class="form-row">
           <label for="scheme">Select Schemes</label>
-          <select id="scheme" class="form-control" formControlName="schemeId">
+          <select required id="scheme" class="form-control" formControlName="schemeId">
             <option selected value='none'>Choose...</option>
-          <option *ngFor="let item of allSchemes;let i = index;" [value]="i">{{item['name']}}</option>
-            
+            <option *ngFor="let item of allSchemes;let i = index;" [value]="i">{{item['name']}}</option>
+
           </select>
         </div>
         <div class="form-row mt-2">
-          <button  class="btn btn-primary" (click)="addScheme(contractForm.value.schemeId)">Select -></button>
+          <button class="btn btn-primary" (click)="addScheme(contractForm.value.schemeId)">Select -></button>
         </div>
       </div>
       <div class="form-group col-6">
@@ -83,12 +221,9 @@
             <div class="custom-height">
               <div class="float-left mx-1">
                 <div class="card-title text-center">
-                  <h6 *ngFor="let item of selectedSchemes;let i = index;"
-                  class="btn btn-success mr-2"
-                    data-toggle="tooltip" data-placement="top"
-                     title="Click to delete"
-                     (click)="removeScheme(i)"
-                     > {{item.name}}</h6>
+                  <h6 *ngFor="let item of selectedSchemes;let i = index;" class="btn btn-success mr-2"
+                    data-toggle="tooltip" data-placement="top" title="Click to delete" (click)="removeScheme(i)">
+                    {{item.name}}</h6>
                 </div>
               </div>
             </div>
@@ -96,8 +231,65 @@
         </div>
       </div>
     </div>
-   
-    <button routerLinkActive="router-link-active" 
-    class="btn btn-primary btn-lg" (click)="generateContract(contractForm.value)"> Generate Contract</button>
+
+
+    <!-- //staffs -->
+    <div class="form-row">
+      <div class="form-group col-6">
+        <div class="form-row">
+          <label for="staff">Select Staffs</label>
+          <select required id="staff" class="form-control" formControlName="staff"
+            (change)="getPersonUnderSoAndStaff(contractForm.value.staff)">
+            <option selected value='none'>Choose...</option>
+            <option *ngFor="let item of staffs;let i = index;" [value]="i">{{item['name']}}</option>
+
+          </select>
+          <label for="person">Select Person</label>
+          <select required id="person" class="form-control" formControlName="person" change>
+            <option selected value='none'>Choose...</option>
+            <option *ngFor="let item of persons;let i = index;" [value]="i">
+              {{item.personCode+' || '+item.firstName+' '+item.middleName+' '+item.lastName}}</option>
+
+          </select>
+        </div>
+        <div class="form-row mt-2">
+          <button class="btn btn-primary" (click)="addStaff(contractForm.value.staff,contractForm.value.person)">Select
+            -></button>
+        </div>
+      </div>
+      <div class="form-group col-6">
+        <div class="card border border-info category-card">
+          <h5 class="card-title text-center mx-2 mt-2 bg-light">Selected Staffs</h5>
+          <div class="card-body mb-2">
+            <div class="custom-height">
+              <div class="float-left mx-1">
+                <div class="card-title text-center">
+                  <h6 *ngFor="let item of staffs;let i = index;" class="btn btn-success mr-2" data-toggle="tooltip"
+                    data-placement="top" title="Click to delete" (click)="removeScheme(i)">
+                    <span>
+                      {{item.name}} :
+                    </span>
+                    <span *ngIf="item.person">
+                      {{item.person.personCode+' || '+item.person.firstName+' '+item.person.middleName+' '+item.person.lastName}}
+                    </span>
+                    <span *ngIf="!item.person" class="text-danger">
+                      : Assign Person :
+                    </span>
+                    <span class="text-warning">
+                      {{ item.workingDays}}
+                    </span>
+
+                  </h6>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <input required type="submit" routerLinkActive="router-link-active" class="btn btn-primary btn-lg"
+      (click)="generateContract(contractForm.value)" value="Generate Contract">
   </form>
 </div>
