--- a/src/app/so/so.component.html
+++ b/src/app/so/so.component.html
@@ -1,4 +1,4 @@
-<div class="container-flex mt-5 mb-5">
+<div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-6">
             <span class="h4">Show SO by district</span>
@@ -47,7 +47,7 @@
     </div>
 </div>
 <!-- table part -->
-<div class="container-flex">
+<div class="container">
     <div class="container-flex">
         <div class="row">
             <div class="col-6">
@@ -419,7 +419,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Assign Staffs to SO</h5>
-                
+
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -444,7 +444,8 @@
                             </select>
                         </div>
                         <div class="form-group col-2">
-                          <span class="btn btn-success w-100" (click)="assignStaffUnderSo(assignForm.value)"><i class="fa fa-plus"></i> Add</span>
+                            <span class="btn btn-success w-100" (click)="assignStaffUnderSo(assignForm.value)"><i
+                                    class="fa fa-plus"></i> Add</span>
                         </div>
 
                     </div>
@@ -452,27 +453,31 @@
 
 
                 <div class="accordion" id="accordionExample">
-                    <div class="card" *ngFor = "let item of staffUnderSo; let i = index;">
-                      <div class="card-header"
-                      (click)="getPersonAssignedUnderStaff(item.staffId,i)" id="headingOne" data-toggle="collapse" [attr.data-target]="'#acc'+i" aria-expanded="false" aria-controls="collapseOne">
-                        <h5 class="mb-0">
-                          
-                            {{item.name}} 
-                            <span class="badge badge-secondary">{{item.number}}</span>
-                        </h5>
-                      </div>
-                  
-                      <div [id]="'acc'+i" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                        <div class="card-body">
-                          <span class="btn btn-success w-100" *ngFor="let element of personUnderAssignedStaff">
-                            {{ element['personCode']+' || '+ element['firstName']+ element['middleName']+element['lastName']   }} 
-<span class="btn btn-danger rounded-circle float-right" (click)="removePersonAssignedUnderStaff(element.staffAllocateId)"> <i class="fa fa-trash"></i></span>
-                          
-                        </span>
+                    <div class="card" *ngFor="let item of staffUnderSo; let i = index;">
+                        <div class="card-header" (click)="getPersonAssignedUnderStaff(item.staffId,i)" id="headingOne"
+                            data-toggle="collapse" [attr.data-target]="'#acc'+i" aria-expanded="false"
+                            aria-controls="collapseOne">
+                            <h5 class="mb-0">
+
+                                {{item.name}}
+                                <span class="badge badge-secondary">{{item.number}}</span>
+                            </h5>
                         </div>
-                      </div>
+
+                        <div [id]="'acc'+i" class="collapse" aria-labelledby="headingOne"
+                            data-parent="#accordionExample">
+                            <div class="card-body">
+                                <span class="btn btn-success w-100" *ngFor="let element of personUnderAssignedStaff">
+                                    {{ element['personCode']+' || '+ element['firstName']+ element['middleName']+element['lastName']   }}
+                                    <span class="btn btn-danger rounded-circle float-right"
+                                        (click)="removePersonAssignedUnderStaff(element.staffAllocateId)"> <i
+                                            class="fa fa-trash"></i></span>
+
+                                </span>
+                            </div>
+                        </div>
                     </div>
-                  </div>
+                </div>
 
             </div>
             <div class="modal-footer">
