successful generation of report and cost

--- a/src/app/contract/contract.component.html
+++ b/src/app/contract/contract.component.html
@@ -269,7 +269,7 @@
                     <td>
                         <p><span style="font-weight: 400;">यातायात खर्च</span></p>
                     </td>
-                    <td>{{contractDetails['transportationCost']}}</td>
+                    <td>{{miscData['transportationCost']}}</td>
                 </tr>
                 <tr>
                     <td>
@@ -278,7 +278,7 @@
                     <td>
                         <p><span style="font-weight: 400;">सञ्&zwj;चार खर्च</span></p>
                     </td>
-                    <td>{{contractDetails['communicationCost']}}</td>
+                    <td>{{miscData['communicationCost']}}</td>
                 </tr>
                 <tr>
                     <td>
@@ -287,7 +287,7 @@
                     <td>
                         <p><span style="font-weight: 400;">रिपोर्टिङ खर्च</span></p>
                     </td>
-                    <td>{{contractDetails['reportingCost']}}</td>
+                    <td>{{miscData['reportingCost']}}</td>
                 </tr>
                 <tr>
                     <td>
@@ -297,7 +297,7 @@
                         <p><span style="font-weight: 400;">संयुक्त अनुगमन(उपभोक्ता समिति, स्थानीय तह तथा सहयोगी
                                 संस्था)</span></p>
                     </td>
-                    <td>{{contractDetails['jointMonitoringCost']}}</td>
+                    <td>{{miscData['jointMonitoringCost']}}</td>
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
